# VibeCodeSec

./: bad_code.py  contributing.md  new.json  new.md  pyproject.toml  readme.md  report.json  report12.json  report12.md  report123.json  report123.md  reportwebscrapper.md  requirements.txt  vibecode.py
docs/: mapping.md
src/rules/: secure_coding.yml  vibe_patterns.yml
src/vibecodesec/: __init__.py  __main__.py  reporters.py  scanner.py  utils.py
src/vibecodesec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
